# thermalcam_calibration

./: cap.py  gitmaker.py  graph.py  main.py  pyproject.toml  temp_cam.py  thermistor.py
