[project]
name = "temp-cam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-circuitpython-ads1x15>=2.4.4",
    "imageio>=2.37.0",
    "lgpio>=0.2.2.0",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
]
